@@ -263,9 +263,10 @@ if ( class_exists( 'GFForms' ) ) {
 			}
 
 			add_action( 'admin_notices', array( $this, 'action_admin_notices' ) );
-			
+
 			wp_register_style( 'gravityflow_dashicons', plugins_url( 'gravityflow/css/gravityflow-icon.css' ) );
-            		wp_enqueue_style( 'gravityflow_dashicons' );
+			wp_enqueue_style( 'gravityflow_dashicons' );
+
 		}
 
 		/**
@@ -1477,15 +1478,15 @@ PRIMARY KEY  (id)
 			$settings = array();
 
 			$step_type_setting = array(
-				'name'       => 'step_type',
-				'label'      => esc_html__( 'Step Type', 'gravityflow' ),
-				'type'       => 'radio_image',
-				'horizontal' => true,
-				'required'   => true,
-				'onchange'   => 'jQuery(this).parents("form").submit();',
-				'choices'    => $step_type_choices,
+				'name'                => 'step_type',
+				'label'               => esc_html__( 'Step Type', 'gravityflow' ),
+				'type'                => 'radio_image',
+				'horizontal'          => true,
+				'required'            => true,
+				'onchange'            => 'jQuery(this).parents("form").submit();',
+				'choices'             => $step_type_choices,
+				'validation_callback' => array( $this, 'step_type_validation_callback' ),
 			);
-
 
 			$step_id = absint( rgget( 'fid' ) );
 
@@ -1670,7 +1671,6 @@ PRIMARY KEY  (id)
 					array(
 						'id'       => 'save_button',
 						'type'     => 'save',
-						'validation_callback' => array( $this, 'save_feed_validation_callback' ),
 						'name' => 'save_button',
 						'value'    => __( 'Update Step Settings', 'gravityflow' ),
 						'messages' => array(
@@ -1715,8 +1715,55 @@ PRIMARY KEY  (id)
 		/**
 		 * Sets the _assignee_settings_md5 class property on feed validation, if there are entries on this step.
 		 *
+		 * @since 2.7
+		 *
+		 * @param $field        \Gravity_Forms\Gravity_Forms\Settings\Fields\Base|array Gravity Forms 2.4: array, 2.5: Settings API field
+		 * @param $field_setting
+		 */
+		public function step_type_validation_callback( $field, $field_setting ) {
+			$current_step_id = $this->get_current_feed_id();
+			$entry_count = 0;
+			$current_step = false;
+			if ( $current_step_id ) {
+				$current_step = $this->get_step( $current_step_id );
+				$entry_count = $current_step->entry_count();
+			}
+
+			if ( $current_step ) {
+				$required_capabilities = $current_step->get_required_capabilities();
+				// Checking ALL required capabilities, one by one.
+				// In this way, we can also match the "gform_full_access" cap with other Gravity Form or Gravity Flow caps.
+				foreach ( $required_capabilities as $cap ) {
+					if ( ! $this->current_user_can_any( $cap ) ) {
+						$error_message = esc_html__( "You don't have sufficient permissions to update the step settings.", 'gravityflow' );
+						GFCommon::add_error_message( $error_message );
+						if ( $this->is_gravityforms_supported( '2.5-beta-1' ) ) {
+							$field->set_error( $error_message );
+						} else {
+							$this->set_field_error( $field, $error_message );
+						}
+						return;
+					}
+				}
+			}
+
+			$assignee_settings = array();
+
+			if ( $entry_count > 0 && $current_step ) {
+				$this->_assignee_settings_md5 = $current_step->assignees_hash();
+			}
+		}
+
+		/**
+		 * Sets the _assignee_settings_md5 class property on feed validation, if there are entries on this step.
+		 * Also checks permissions.
+		 *
+		 *
+		 * @deprecated 2.7
+		 *
 		 * @since 1.0
-		 * @since 2.5     Add new checks for step required capabilities.
+		 * @since 2.5   Add new checks for step required capabilities.
+		 * @since 2.7   Unused
 		 *
 		 * @param array  $field         The field properties.
 		 * @param string $field_setting The field value.
@@ -1724,6 +1771,8 @@ PRIMARY KEY  (id)
 		 * @return bool
 		 */
 		public function save_feed_validation_callback( $field, $field_setting ) {
+
+			_deprecated_function( 'save_feed_validation_callback', '2.7', 'step_type_validation_callback' );
 
 			$current_step_id = $this->get_current_feed_id();
 			$entry_count = 0;
@@ -1746,19 +1795,8 @@ PRIMARY KEY  (id)
 				}
 			}
 
-			$assignee_settings = array();
-
 			if ( $entry_count > 0 && $current_step ) {
-				$assignee_settings['assignees'] = array();
-				$current_assignees = $current_step->get_assignees();
-				foreach ( $current_assignees as $current_assignee ) {
-					$assignee_settings['assignees'][] = $current_assignee->get_key();
-				}
-				if ( $current_step->get_type() == 'approval' ) {
-					$assignee_settings['unanimous_approval'] = $current_step->unanimous_approval;
-				}
-
-				$this->_assignee_settings_md5 = md5( serialize( $assignee_settings ) );
+				$this->_assignee_settings_md5 = $current_step->assignees_hash();
 			}
 
 			return true;
@@ -1854,16 +1892,8 @@ PRIMARY KEY  (id)
 			if ( empty( $current_step ) ) {
 				return $results;
 			}
-			$assignee_settings['assignees'] = array();
-			$assignees = $current_step->get_assignees();
-			foreach ( $assignees as $assignee ) {
-				/* @var Gravity_Flow_Assignee $assignee */
-				$assignee_settings['assignees'][] = $assignee->get_key();
-			}
-			if ( $current_step->get_type() == 'approval' ) {
-				$assignee_settings['unanimous_approval'] = $current_step->unanimous_approval;
-			}
-			$assignee_settings_md5 = md5( serialize( $assignee_settings ) );
+
+			$assignee_settings_md5 = $current_step->assignees_hash();
 			if ( isset( $this->_assignee_settings_md5 ) && $this->_assignee_settings_md5 !== $assignee_settings_md5 ) {
 				$results = $this->refresh_assignees();
 			}
@@ -1915,7 +1945,6 @@ PRIMARY KEY  (id)
 						$assignee->update_status( 'pending' );
 						$step->end_if_complete();
 						$results['added'][] = $assignee;
-						$updated = true;
 					}
 				}
 
@@ -1931,12 +1960,9 @@ PRIMARY KEY  (id)
 					$old_assignee->remove();
 					$old_assignee->log_event( 'removed' );
 					$results['removed'][] = $old_assignee;
-					$updated = true;
 				}
 
-				if ( $updated ) {
-					$this->process_workflow( $form, $entry_id );
-				}
+				$this->process_workflow( $form, $entry_id );
 			}
 
 			return $results;
